<resources>
    <string name="app_name">InstagramClone</string>
    <string name="user_name">User Name</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="already_registered_log_in">Already Registered? Log in</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account ? Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="follow">Follow</string>
    <string name="add_comment_here">Add Comment here..</string>
    <string name="caps_edit_profile">EDIT PROFILE</string>
    <string name="fullname">FullName</string>
    <string name="username">UserName</string>
    <string name="bio">Bio</string>
    <string name="notification_content">Here goes the contents of notification</string>
    <string name="change_photo">Change Photo</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
</resources>